BEAST xml: added the stdev of lognormal distribution (on diffusionRate) to the logs

--- a/data/templates/beast_rrw_template.xml
+++ b/data/templates/beast_rrw_template.xml
@@ -275,6 +275,7 @@
 			<correlation idref="location.correlation"/>
 			<matrixInverse idref="location.varCovar"/>
 			<continuousDiffusionStatistic idref="location.diffusionRate"/>
+			<parameter idref="location.stdev"/>
 
 			<!-- END Multivariate diffusion model                                        -->
 
